[gd_scene load_steps=10 format=3 uid="uid://cpp730e50fn3p"]

[ext_resource type="Script" uid="uid://butfc66all2no" path="res://src/ui/main/main.gd" id="1_86qe4"]
[ext_resource type="PackedScene" uid="uid://b45p8nijrvd3v" path="res://src/ui/browser/browser.tscn" id="1_prqn1"]
[ext_resource type="PackedScene" uid="uid://cfbphdd74su8c" path="res://src/ui/editor/editor.tscn" id="1_x2835"]
[ext_resource type="PackedScene" uid="uid://dfkt6ernbrafa" path="res://src/ui/menu_bar/menu_bar.tscn" id="2_xxxww"]
[ext_resource type="Script" uid="uid://cfgw7s0cva7bu" path="res://src/classes/relative_split_container.gd" id="3_3bsis"]
[ext_resource type="Script" uid="uid://c0dv7nxul5psh" path="res://src/ui/main/notification_tray.gd" id="3_33nu0"]
[ext_resource type="PackedScene" uid="uid://b5buokqgbn0uf" path="res://src/ui/image_viewer/image_viewer.tscn" id="8_b55ab"]
[ext_resource type="PackedScene" uid="uid://kfuvy0jjrr55" path="res://src/ui/search_panel/search_panel.tscn" id="8_jng44"]
[ext_resource type="Script" uid="uid://cvskefdh0dvlr" path="res://src/classes/keep_visible_component.gd" id="8_u3jv8"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86qe4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuBar" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_xxxww")]
unique_name_in_owner = true
layout_mode = 2

[node name="NotificationTray" type="Container" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("3_33nu0")

[node name="NothingToShowLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Open a folder with Ctrl+Shift+O or with the menu at the top"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContainer" type="SplitContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
theme_override_constants/autohide = 1
split_offset = 227
script = ExtResource("3_3bsis")
relative_split_offset = 0.2

[node name="Browser" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer" instance=ExtResource("1_prqn1")]
unique_name_in_owner = true
layout_mode = 2

[node name="Editors" type="SplitContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
vertical = true
script = ExtResource("3_3bsis")
relative_split_offset = 0.6

[node name="TextEditors" type="SplitContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer/Editors"]
visible = false
layout_mode = 2
script = ExtResource("3_3bsis")
relative_split_offset = 0.5

[node name="LeftEditor" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer/Editors/TextEditors" instance=ExtResource("1_x2835")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="RightEditor" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer/Editors/TextEditors" instance=ExtResource("1_x2835")]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2

[node name="KeepVisibleComponent" type="Node" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer/Editors/TextEditors"]
script = ExtResource("8_u3jv8")

[node name="ImageViewer" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer/Editors" instance=ExtResource("8_b55ab")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SearchPanel" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer/Editors" instance=ExtResource("8_jng44")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="KeepVisibleComponent" type="Node" parent="VBoxContainer/MarginContainer/VBoxContainer/MainContainer/Editors"]
script = ExtResource("8_u3jv8")

[connection signal="file_opened" from="VBoxContainer/MarginContainer/VBoxContainer/MainContainer/Browser" to="." method="open_file"]
